--- a/speaking/index.html
+++ b/speaking/index.html
@@ -13,7 +13,7 @@ title: Sam Selikoff - Speaking
 
   {% assign sorted_talks = (site.talks | sort: 'date') %}
   {% for talk in sorted_talks reversed %}
-    <div class='box box-small box-left'>
+    <div class='box box-sm box-left'>
       <div class="box-body">
         <p class='box-title'><a href="{{talk.url}}">
           {{talk.title}}
