--- a/work/index.html
+++ b/work/index.html
@@ -11,7 +11,7 @@ title: Sam Selikoff - Work
 
   {% assign sorted_projects = (site.projects | sort: 'date' | reverse) %}
   {% for project in sorted_projects %}
-    <div class='box box-small box-left'>
+    <div class='box box-sm box-left'>
       <div class="box-body">
         <p class='box-title'><a href="{{project.project_url}}">
           {{project.title}}
