--- a/writing/index.html
+++ b/writing/index.html
@@ -13,7 +13,7 @@ title: Sam Selikoff - Writing
 
   <h2>Tutorials</h2>
   {% for article in site.data.writing.tutorials %}
-    <div class='box box-small box-left'>
+    <div class='box box-sm box-left'>
       <div class="box-body">
         <a class='box-title' href="{{article.url}}">{{article.title}}</a>
       </div>
@@ -22,7 +22,7 @@ title: Sam Selikoff - Writing
 
   <h2>Book notes</h2>
   {% for article in site.data.writing.book_reviews %}
-    <div class='box box-small box-left'>
+    <div class='box box-sm box-left'>
       <div class="box-body">
         <a class='box-title' href="{{article.url}}">{{article.title}}</a>
       </div>
@@ -31,7 +31,7 @@ title: Sam Selikoff - Writing
 
   <h2>Economics</h2>
   {% for article in site.data.writing.economics %}
-    <div class='box box-small box-left'>
+    <div class='box box-sm box-left'>
       <div class="box-body">
         <a class='box-title' href="{{article.url}}">{{article.title}}</a>
       </div>
