--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ title: Sam Selikoff
 */</style>
 
 <div id="home">
-  <div class='home-section home-nav inverted'>
+  <div class='home-section home-nav inverted u-clearfix'>
 
     <div class='shadow-floating box box-left box-lg'>
       <div class='box-body'>
