--- a/work/index.html
+++ b/work/index.html
@@ -6,7 +6,7 @@ title: Sam Selikoff - Work
 <div id="work">
 
   <div class="title">
-    <h1>Work</h1>
+    <h1>Code + Design</h1>
   </div>
 
   {% assign sorted_projects = (site.projects | sort: 'date' | reverse) %}
