--- a/talks/index.html
+++ b/talks/index.html
@@ -1,12 +1,12 @@
 ---
 layout: inverted
-title: Sam Selikoff - Speaking
+title: Sam Selikoff - Talks
 ---
 
-<div id="speaking">
+<div id="talks">
 
   <div class="title">
-    <h1>Speaking</h1>
+    <h1>Talks</h1>
     <p>I love speaking and teaching (for free) on all things front-end web development.</p>
     <p><a class='link-inverted' href="mailto:sam.selikoff@gmail.com">Reach out to me</a> if you'd like me to speak at your event.</p>
   </div>
