--- a/about/index.html
+++ b/about/index.html
@@ -7,30 +7,8 @@ title: Sam Selikoff - About
 
   <div class="page-header">
     <h1>Sam Selikoff</h1>
-    <p class='page-header-subtitle'>I'm an intermediate developer with experience in front- and back-end web development</p>
+    <p class='page-header-subtitle'>I'm a front-end web developer at <a href="http://www.ted.com"><strong>TED</strong></a> interested in JavaScript, data visualization and economics</p>
   </div>
-  
-  <p>The big picture is important to me, and I like being able to contribute to every part of a project. I'm a self-starter with a passion for building beautiful, valuable software. I'm currently focusing on Javascript - specifically data visualization and client-side MVC.</p>
-  
-  <div class="skills">
-  	<p>Here are the <span class="label web">HTML/CSS</span>, <span class="label js">Javascript, </span> and <span class="label server">server-side</span> technologies I've worked with most:</p>
-
-    <span class="tag web">HTML</span>
-    <span class="tag web">SASS/CSS</span>
-    <a href="http://compass-style.org/" target="_blank"><span class="tag link web">Compass</span></a>
-    <a href="http://d3js.org/" target="_blank"><span class="tag link js">D3</span></a>
-    <a href="http://emberjs.com/" target="_blank"><span class="tag link js">Ember</span></a>
-    <a href="http://backbonejs.org/" target="_blank"><span class="tag link js">Backbone</span></a>
-    <a href="http://symfony.com/" target="_blank"><span class="tag link server">Symfony</span></a>
-    <a href="http://silex.sensiolabs.org/" target="_blank"><span class="tag link server">Silex</span></a>
-    <span class="tag server">Perl</span>
-    <span class="tag server">MySQL</span>
-    <span class="tag server">Linux</span>
-  </div>
-  
-  <p>You can find my resume <a href="/resume">here.</a></p>
-
-  <hr>
 
   <p>Before learning web development, I was pursuing a doctoral degree in economics. After realizing that academia wasn't for me, I discovered programming, and haven't looked back since. <a href="{% post_url 2013-05-26-a-new-career %}">Read more about my career change in this blog post.</a></p>
 
