Refactor container class

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Sam Selikoff
 </style>
 
 <header class='mainHeader_large shadow'>
-  <div class="u-container">
+  <div class="container">
     <div class="mainHeader-info">
       <a class='mainHeader-logo' href='/'>Sam<span>Selikoff</span></a>
       <p>web development · economics</p>
@@ -25,8 +25,8 @@ title: Sam Selikoff
 </header>
 
 <section class="main">
-  <div id="home">
-    <div class='home-section home-nav inverted u-clearfix'>
+  <div class='inverted'>
+    <div class='home-section container'>
 
       <div class='shadow-floating box box-left box-lg'>
         <div class='box-body'>
