--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@ title: Sam Selikoff
   }
 </style>
 
-<header class='mainHeader_large shadow'>
+<header class='header_large shadow'>
   <div class="container">
-    <div class="mainHeader-info">
-      <a class='mainHeader-logo' href='/'>Sam<span>Selikoff</span></a>
+    <div class="header-info">
+      <a class='header-logo' href='/'>Sam<span>Selikoff</span></a>
       <p>web development · economics</p>
     </div>
     
-    <p class='mainHeader-aboutLink'><a href="/about">
+    <p class='header-aboutLink'><a href="/about">
       <span class="u-accent">[</span> about <span class="u-accent">]</span>
     </a></p>
   </div>
@@ -93,6 +93,6 @@ title: Sam Selikoff
   </div>
 </section>
 
-<footer id="home">
+<footer>
   {% include contact.html %}
 </footer>
